--- a/Tugas.html
+++ b/Tugas.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="">
-        <link rel="stylesheets">
+        <link rel="stylesheets">\
+        <title>Tugas</title>
     </head>
 
     <body>
